assets/stylesheets/common/common.scss
/* ... */
.chat-messages-container {
  word-wrap: break-word;
  white-space: normal;

  .chat-message-container {
    display: grid;

    &.selecting-messages {
      grid-template-columns: 1.5em 1fr;
    }

    .chat-message-selector {
      align-self: center;
      justify-self: end;
      margin: 0;
    }
  }

  .chat-time {
    color: var(--primary-high);
    font-size: var(--font-down-2);
  }

  .emoji-picker {
    position: fixed;
  }

  &:hover {
    .chat-.chat-message-react-btn {
      display: inline-block;
    }
  }
}

.chat-emoji-avatar {
  width: var(--message-left-width);
  align-items: center;

  img {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}

.chat-user-avatar {
  @include unselectable;
  display: flex;
  align-items: center;

  .chat-message:not(.is-reply) & {
    width: var(--message-left-width);
    flex-shrink: 0;
  }

  &.is-online {
    .chat-user-avatar-container .avatar {
      box-shadow: 0px 0px 0px 1px var(--success);
      border: 1px solid var(--secondary);
      padding: 0;
    }
  }

  .chat-user-avatar-container {
    position: relative;

    .avatar {
      padding: 1px;
    }

    .chat-user-presence-flair {
      box-sizing: border-box;
      position: absolute;
      background-color: var(--success);
      border: 1px solid var(--secondary);
      border-radius: 50%;

      .chat-message & {
        width: 10px;
        height: 10px;
        right: 0px;
        bottom: 0px;
      }

      .chat-channel-title & {
        width: 8px;
        height: 8px;
        right: -1px;
        bottom: -1px;
      }
    }
  }

  .chat-channel-title & {
    width: auto;
  }
}

.chat-live-pane {
  display: flex;
  position: relative;
  flex-direction: column;
  width: 100%;
  min-height: 1px;

  .chat-messages-scroll {
    flex-grow: 1;
    overflow-y: scroll;
    overflow-y: overlay;
    scrollbar-color: var(--primary-low) transparent;
    transition: scrollbar-color 0.2s ease-in-out;
    display: flex;
    flex-direction: column-reverse;
    z-index: 1;

    &::-webkit-scrollbar {
      width: 15px;
    }
    &::-webkit-scrollbar-thumb {
      background: var(--primary-low);
      border-radius: 8px;
      border: 3px solid var(--secondary);
    }
    &::-webkit-scrollbar-track {
      background-color: transparent;
    }
    &:hover {
      scrollbar-color: var(--primary-low-mid) transparent;
      &::-webkit-scrollbar-thumb {
        background: var(--primary-low-mid);
      }
    }

    .join-channel-btn.in-float {
      position: absolute;
      transform: translateX(-50%);
      left: 50%;
      top: 10px;
      z-index: 10;
    }

    .all-loaded-message {
      text-align: center;
      color: var(--primary-medium);
      font-size: var(--font-down-1);
      padding: 0.5em 0.25em 0.25em;
    }
  }

  .scroll-stick-wrap {
    position: relative;
  }

  .chat-scroll-to-bottom {
    background: var(--primary-medium);
    bottom: 1em;
    border-radius: 100%;
    left: 50%;
    opacity: 50%;
    padding: 0.5em;
    position: absolute;
    transform: translateX(-50%);
    z-index: 2;

    &:hover {
      background: var(--primary-medium);
      opacity: 100%;
    }

    .d-icon {
      color: var(--primary);
      margin: 0;
    }

    &.unread-messages {
      opacity: 85%;
      border-radius: 0;
      transition: border-radius 0.1s linear;

      &:hover {
        opacity: 100%;
      }

      .d-icon {
        margin: 0 0 0 0.5em;
      }
    }
  }
}

.topic-title-chat-icon {
  display: inline-block;
  * {
    display: inline-block;
  }
}

.chat-channel-row {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  position: relative;
  cursor: pointer;
  color: var(--primary-high);
  transition: opacity 50ms ease-in;
  opacity: 1;

  .chat-channel-unread-indicator {
    margin-left: 0.5rem;
  }

  &.unfollowing {
    opacity: 0;
  }

  .toggle-channel-membership-button.-leave {
    visibility: hidden;
    margin-left: auto;
  }

  &:hover {
    .toggle-channel-membership-button.-leave {
      visibility: visible;

      > * {
        pointer-events: auto;
      }
    }
  }

  .discourse-no-touch &:hover,
  &.active {
    background: var(--primary-low);
  }

  &:hover,
  &.active {
    .topic-chat-badge .topic-chat-icon .d-icon {
      background: transparent;
    }
    &.active {
      font-weight: 600;
    }

    .chat-channel-unread-indicator {
      border-color: var(--primary-low);
    }

    .chat-channel-title {
      &,
      .category-chat-name,
      .dm-usernames {
        color: var(--primary);
      }

      .d-icon-lock {
        background-color: var(--primary-low);
      }
    }
  }

  &.muted {
    opacity: 0.65;
  }
  .badge-wrapper {
    align-items: center;
    margin-right: 0;
  }

  .chat-channel-unread-indicator {
    background: var(--tertiary-med-or-tertiary);

    &.urgent {
      background: var(--success);
    }
  }

  .chat-channel-row-unread-count {
    display: inline-block;
    margin-left: 5px;
    font-size: var(--font-down-1);
    color: var(--primary-high);
  }

  .emoji {
    margin-left: 0.3em;
  }
}
/* ... */

